# jarvis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  EXTENDING.md  GEMINI.md  LEARNING.md  README.md  ROADMAP.md  install.sh  main.py  pyproject.toml  requirements.txt
config/: rules.md  settings.yaml
config/personas/: coder.md  creative.md  default.md  planner.md  researcher.md
core/: ollama_client.py
docs/: ai_concepts.md  architecture.md  rag_techniques.md
jarvis/: __init__.py  assistant.py  cli.py
jarvis/auth/: __init__.py  claude.py  codex.py  db.py  dependencies.py  email_auth.py  email_service.py  middleware.py  models.py
jarvis/core/: agent.py  context_manager.py  fact_extractor.py  intent.py  ollama_client.py  orchestrator.py  permissions.py  router.py  sub_agent.py  tools.py
jarvis/integrations/: __init__.py  telegram_bot.py
jarvis/knowledge/: __init__.py  rag.py
jarvis/providers/: __init__.py  anthropic.py  base.py  chutes.py  gemini.py  ollama.py  openai.py
jarvis/skills/: __init__.py  document_processor.py  media_gen.py  multi_model_analysis.py  skill_creator.py  web_search.py
jarvis/ui/: __init__.py  app.py  terminal.py
jarvis/voice/: __init__.py  voice_mode.py
memory/: entities.json  facts.md
skills/: file_ops.py  telegram.py  weather.py
tests/: test_agent_plan_mode.py  test_cli_commands.py  test_create_pr.py  test_permissions.py  test_terminal_ui.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ChatSidebar.tsx  index.ts
web/src/components/auth/: LoginPage.tsx  ProtectedRoute.tsx
web/src/components/camera/: DraggableCamera.tsx
web/src/components/chat/: EmptyState.tsx  MessageBubble.tsx  MessageList.tsx  ThinkingBlock.tsx  ToolStatus.tsx  index.ts
web/src/components/dashboard/: DashboardView.tsx  WidgetCard.tsx  index.ts
web/src/contexts/: AuthContext.tsx
web/src/hooks/: useCamera.ts  useDraggable.ts  useFileUpload.ts  useSettings.ts  useTheme.ts  useVoice.ts  useWakeWord.ts  useWebSocket.ts
web/src/lib/: utils.ts
web/src/types/: dashboard.ts  index.ts
(+26 files in other folders)
